--- a/config.ini.sample
+++ b/config.ini.sample
@@ -2,3 +2,8 @@
 GEMINI_API_KEY=your_gemini_api_key_here
 SLACK_BOT_TOKEN=xoxb-your_slack_bot_token_here
 CHROOT_DIR=/home/grimlock/work/go-thing/tmp
+; Optional Docker sandbox settings (used for shell_exec sandboxing)
+; DOCKER_CONTAINER_NAME=go-thing-arch
+; DOCKER_IMAGE=archlinux:latest
+; DOCKER_EXTRA_ARGS=--privileged
+; DOCKER_AUTO_REMOVE=true
