security: restrict WebSocket origins to prevent CSWSH via CheckOrigin allowlist and same-origin fallback; config: add [default] ALLOWED_ORIGINS in config.sample.ini; fix: avoid double-close panic in /shell/ws by guarding done with sync.Once; refactor: deduplicate PWD extraction in shell_session tool via extractCwdAndTrim(); docs: update .windsurf_plan.md with Security Hardening notes

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -2,6 +2,9 @@
 GEMINI_API_KEY=your_api_key
 SLACK_BOT_TOKEN=xoxb-token
 CHROOT_DIR=/tmp/go-thing-chroot
+# Optional: comma-separated list of allowed WebSocket origins for /shell/ws
+# Example: https://your.domain.com, http://localhost:7866
+ALLOWED_ORIGINS=
 
 [postgres]
 # Provide either PG_DSN or individual fields
