--- a/config.sample.ini
+++ b/config.sample.ini
@@ -7,12 +7,12 @@ CHROOT_DIR=/tmp/go-thing-chroot
 ALLOWED_ORIGINS=
 
 [postgres]
-# Provide either PG_DSN or individual fields
-# PG_DSN=postgres://user:pass@localhost:5432/go_thing?sslmode=disable
-HOST=localhost
-PORT=5432
-USER=postgres
-PASSWORD=
-DBNAME=go_thing
-SSLMODE=disable
-MIGRATIONS_DIR=./migrations
+# Provide either DB_DSN or individual fields
+# DB_DSN=postgres://user:pass@localhost:5432/go_thing?sslmode=disable
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=
+DB_NAME=go_thing
+DB_SSLMODE=disable
+DB_MIGRATIONS_DIR=./migrations
