--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "marked": "^12.0.2"
+    "marked": "^12.0.2",
+    "@xterm/xterm": "^5.4.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-attach": "^0.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
